--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+YUGIOH_CARD_API_BASE_URL=https://yugioh-card-api.kaishiyoku.rocks/api/v1
