closed #4 now caching API service calls

--- a/.env.example
+++ b/.env.example
@@ -39,3 +39,4 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 YUGIOH_CARD_API_BASE_URL=https://yugioh-card-api.kaishiyoku.rocks/api/v1
+YUGIOH_CARD_API_CACHE_MINUTES=720
