--- a/composer.json
+++ b/composer.json
@@ -10,24 +10,24 @@
     "require": {
         "php": "^7.1.3",
         "ext-curl": "*",
-        "fideloper/proxy": "^4.0",
-        "kaishiyoku/laravel-cli-create-user": "^2.1",
-        "laracasts/flash": "^3.0",
-        "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.7",
-        "predis/predis": "^1.1"
+        "fideloper/proxy": "4.1.0",
+        "kaishiyoku/laravel-cli-create-user": "2.2.0",
+        "laracasts/flash": "3.0.2",
+        "laravel/framework": "5.8.2",
+        "laravel/tinker": "1.0.8",
+        "laravelcollective/html": "5.8.0",
+        "predis/predis": "1.1.1"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.2",
-        "barryvdh/laravel-ide-helper": "^2.5",
-        "beyondcode/laravel-dump-server": "^1.0",
-        "doctrine/dbal": "^2.9",
-        "filp/whoops": "^2.0",
-        "fzaninotto/faker": "^1.4",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "barryvdh/laravel-debugbar": "3.2.3",
+        "barryvdh/laravel-ide-helper": "2.6.0",
+        "beyondcode/laravel-dump-server": "1.2.2",
+        "doctrine/dbal": "2.9.2",
+        "filp/whoops": "2.3.1",
+        "fzaninotto/faker": "1.8.0",
+        "mockery/mockery": "1.2.2",
+        "nunomaduro/collision": "2.1.1",
+        "phpunit/phpunit": "7.5.6"
     },
     "config": {
         "optimize-autoloader": true,
