--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "ext-curl": "*",
         "fideloper/proxy": "4.1.0",
         "kaishiyoku/laravel-cli-create-user": "2.2.0",
+        "kaishiyoku/laravel-menu": "3.0.0",
         "laracasts/flash": "3.0.2",
         "laravel/framework": "5.8.2",
         "laravel/tinker": "1.0.8",
